fix custom action

--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -1,7 +1,7 @@
 name: Get & Cache Dependencies
 description: Get the dependencies (via npm) and cache them.
 runs:
-  using: composite
+  using: 'composite'
   steps:
     - name: Cache dependencies
       id: cache
@@ -12,4 +12,5 @@ runs:
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci
+      shell: bash
   
