--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Load dependencies
         uses: ./.github/actions/cached-deps
         with:
-          caching: false
+          caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
