--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,12 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Load dependencies
+        id: load-deps
         uses: ./.github/actions/cached-deps
         with:
           caching: 'false'
+      - name: Output information
+        run: echo "Cache used? ${{ steps.load-deps.outputs.used-cache }}"
       - name: Lint code
         run: npm run lint
   test:
